--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,8 +53,8 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
-          path: sbc_exporter-*
+          name: ${{ matrix.binary }}
+          path: ${{ matrix.binary }}
 
   release:
     name: Create Release
@@ -64,8 +64,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: binaries
           path: artifacts
+          merge-multiple: true
 
       - uses: softprops/action-gh-release@v1
         with:
