--- a/charts/sbc-exporter/values.yaml
+++ b/charts/sbc-exporter/values.yaml
@@ -43,7 +43,7 @@ affinity: {}
 
 metrics:
   serviceMonitor:
-    enabled: false
+    enabled: true
     interval: 30s
     scrapeTimeout: 10s
     namespace: ""
